# mcp-auth-broker

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.context-engineering/: governance.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  governance-pr-gates.yml
docs/: runbook-1password-service-account.md  runbook-operations.md
docs/adr/: ADR-0001-1password-phase1-mode.md  ADR-0002-requester-identity-model.md  ADR-0003-token-handling-policy.md  template.md
docs/bootstrap/: decisions.md  dependency-policy.md
docs/spec/: audit-schema.md  non-functional-contracts.md  policy-model.md  tool-contracts.md
scripts/: check_licenses.py  container-smoke-e2e.sh
src/mcp_auth_broker/: __init__.py  audit.py  cli.py  config.py  graph_tokens.py  policy.py  redaction.py  secrets.py  server.py  smoke.py
tests/: test_graph_tokens.py  test_redaction.py  test_secrets.py  test_smoke.py
